charts/LBDeployment/hdp-lb-server-deploy/templates/hdp-server-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    haproxy.org/check: "true"
    haproxy.org/check-http: HEAD /api/healthcheck
    haproxy.org/check-interval: 5m
  name: hdp-server-app-headless
  namespace: default
spec:
  #type: LoadBalancer
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080   
  selector:
    app: hdp-server-app
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 86400
